--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,18 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+.card__like{
+  display: flex;
+  flex-direction: column;
+  align-items:center
+}
+
+.card__count-like{
+  font-family: Inter;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: center;
+
+}
