--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -27,3 +27,25 @@
   user-select: none;
   transition: visibility 0s 0.6s, opacity 0.6s;
 }
+
+.popup__input_type_error{
+  border-bottom:1px solid red ;
+}
+
+.message-error{
+  color: #F00;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: none;
+} 
+
+.message-error_active{
+  display: block;
+}
+
+.popup__button:disabled{
+  background-color: gray;
+}
