--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,9 +19,25 @@
   cursor: pointer;
 }
 
+.popup__button:disabled{
+  background-color: #fff;
+  border: 1px solid #000;
+  color: #000;
+  opacity: 0.2;
+}
+
+
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
     line-height: 17px;
   }
+}
+@keyframes blink {
+  0%, 100% {opacity: 1;}
+  50% {opacity: 0.5;}
+}
+.blink-button {
+  animation: blink 3s linear infinite;
 }
