--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,3 +1,8 @@
+.profile__avatar{
+  display: flex;
+  position: relative;
+}
+
 .profile__image {
   width: 120px;
   height: 120px;
@@ -10,10 +15,26 @@
 }
 
 .profile__image:hover{
-  opacity: 0.3;
+  opacity: 0.4;
   cursor: pointer;
 }
 
+.profile__image-hover{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -25px;
+  margin-top: -13px;
+  max-width: 26px;
+  max-height: 26px;
+  opacity: 0;
+
+}
+
+.profile__image:hover + .profile__image-hover{
+  opacity: 1;
+
+}
 
 @media screen and (max-width: 740px) {
   .profile__image {
