--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -11,7 +11,9 @@
 .popup__avatar {
   min-height: 272px;
 }
-
+.popup__confirm{
+  min-height: 181px;
+}
 @media screen and (max-width: 568px) {
   .popup__content {
     width: 100%;
